site/docs/3.1.3/api/python/_sources/reference/api/pyspark.ml.clustering.KMeansModel.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.


KMeansModel
=================================

.. currentmodule:: pyspark.ml.clustering

.. autoclass:: KMeansModel

    
      
    

    
    

    .. rubric:: Methods

    .. autosummary::
    
       ~KMeansModel.clear
       ~KMeansModel.clusterCenters
       ~KMeansModel.copy
       ~KMeansModel.explainParam
       ~KMeansModel.explainParams
       ~KMeansModel.extractParamMap
       ~KMeansModel.getDistanceMeasure
       ~KMeansModel.getFeaturesCol
       ~KMeansModel.getInitMode
       ~KMeansModel.getInitSteps
       ~KMeansModel.getK
       ~KMeansModel.getMaxIter
       ~KMeansModel.getOrDefault
       ~KMeansModel.getParam
       ~KMeansModel.getPredictionCol
       ~KMeansModel.getSeed
       ~KMeansModel.getTol
       ~KMeansModel.getWeightCol
       ~KMeansModel.hasDefault
       ~KMeansModel.hasParam
       ~KMeansModel.isDefined
       ~KMeansModel.isSet
       ~KMeansModel.load
       ~KMeansModel.predict
       ~KMeansModel.read
       ~KMeansModel.save
       ~KMeansModel.set
       ~KMeansModel.setFeaturesCol
       ~KMeansModel.setPredictionCol
       ~KMeansModel.transform
       ~KMeansModel.write

    
    

    
    

    .. rubric:: Attributes

    .. autosummary::
    
       ~KMeansModel.distanceMeasure
       ~KMeansModel.featuresCol
       ~KMeansModel.hasSummary
       ~KMeansModel.initMode
       ~KMeansModel.initSteps
       ~KMeansModel.k
       ~KMeansModel.maxIter
       ~KMeansModel.params
       ~KMeansModel.predictionCol
       ~KMeansModel.seed
       ~KMeansModel.summary
       ~KMeansModel.tol
       ~KMeansModel.weightCol

    
    

    
    

    .. rubric:: Methods Documentation

    
    .. automethod:: clear
    .. automethod:: clusterCenters
    .. automethod:: copy
    .. automethod:: explainParam
    .. automethod:: explainParams
    .. automethod:: extractParamMap
    .. automethod:: getDistanceMeasure
    .. automethod:: getFeaturesCol
    .. automethod:: getInitMode
    .. automethod:: getInitSteps
    .. automethod:: getK
    .. automethod:: getMaxIter
    .. automethod:: getOrDefault
    .. automethod:: getParam
    .. automethod:: getPredictionCol
    .. automethod:: getSeed
    .. automethod:: getTol
    .. automethod:: getWeightCol
    .. automethod:: hasDefault
    .. automethod:: hasParam
    .. automethod:: isDefined
    .. automethod:: isSet
    .. automethod:: load
    .. automethod:: predict
    .. automethod:: read
    .. automethod:: save
    .. automethod:: set
    .. automethod:: setFeaturesCol
    .. automethod:: setPredictionCol
    .. automethod:: transform
    .. automethod:: write

    
    

    
    

    .. rubric:: Attributes Documentation

    
    .. autoattribute:: distanceMeasure
    .. autoattribute:: featuresCol
    .. autoattribute:: hasSummary
    .. autoattribute:: initMode
    .. autoattribute:: initSteps
    .. autoattribute:: k
    .. autoattribute:: maxIter
    .. autoattribute:: params
    .. autoattribute:: predictionCol
    .. autoattribute:: seed
    .. autoattribute:: summary
    .. autoattribute:: tol
    .. autoattribute:: weightCol

    
    
